--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dom-helpers": "^3.2.1",
     "history": "^3.2.1",
     "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "prop-types": "^15.5.8",
@@ -46,6 +47,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^1.0.3",
+    "rxjs": "^5.5.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
