--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "prop-types": "^15.5.8",
+    "ramda": "^0.25.0",
+    "rc-select": "^7.6.0",
     "react": "^15.5.0",
     "react-addons-css-transition-group": "^15.5.0",
     "react-bootstrap": "^0.30.7",
